[mathutils.bvhtree]: Overlay function is inaccurate on elements in which one of its bound volume dimensions is equal to zero #45706

Closed
opened 2015-08-06 15:07:26 +02:00 by Germano Cavalcante · 6 comments

Short description of error
When using the Overlay function to detect the elements that overlap, hardly detect the elements that are aligned to one of the axes X, Y or Z.

Exact steps for others to reproduce the error
Create an object which its elements overlap and test that this script:

print('----------------------------------------------')
import bpy
import bmesh
from mathutils import bvhtree


me = bpy.context.object.data
bm = bmesh.from_edit_mesh(me)
face = bm.faces.active


verts  = [v.co for v in face.verts]
polygons = [[face.verts[:].index(v) for v in face.verts]]


bvh1 = bvhtree.BVHTree.FromPolygons(verts, polygons, epsilon=0.0)


bvh2 = bvhtree.BVHTree.FromBMesh(bm)


overlap = bvh1.overlap(bvh2)
print(overlap)
for f1, f2 in overlap:
    bm.faces[f2].select_set(True)

Note that if one element is flush to two axes, it will probably be ignored.
blend: test_bvh_bug.blend

**Short description of error** When using the Overlay function to detect the elements that overlap, hardly detect the elements that are aligned to one of the axes X, Y or Z. **Exact steps for others to reproduce the error** Create an object which its elements overlap and test that this script: ``` print('----------------------------------------------') import bpy import bmesh from mathutils import bvhtree me = bpy.context.object.data bm = bmesh.from_edit_mesh(me) face = bm.faces.active verts = [v.co for v in face.verts] polygons = [[face.verts[:].index(v) for v in face.verts]] bvh1 = bvhtree.BVHTree.FromPolygons(verts, polygons, epsilon=0.0) bvh2 = bvhtree.BVHTree.FromBMesh(bm) overlap = bvh1.overlap(bvh2) print(overlap) for f1, f2 in overlap: bm.faces[f2].select_set(True) ``` Note that if one element is flush to two axes, it will probably be ignored. blend: [test_bvh_bug.blend](https://archive.blender.org/developer/F220721/test_bvh_bug.blend)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @mano-wii

Added subscriber: @mano-wii
Campbell Barton was assigned by Germano Cavalcante 2015-08-06 15:15:16 +02:00

I probably wont be able to look into this in the next week or so.

If anyone else wants to look into it.
Just to note that this could be an issue/edge-case with the triangle-triangle intersection code.

For a quick test this code could be disabled to check if the bounding boxes intersect.

I probably wont be able to look into this in the next week or so. If anyone else wants to look into it. Just to note that this could be an issue/edge-case with the triangle-triangle intersection code. For a quick test this code could be disabled to check if the bounding boxes intersect.
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel

This issue was referenced by cd8581af8e

This issue was referenced by cd8581af8ebe236fe59d659ef27c31f139f038f7

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45706
No description provided.