Fix T45706: Axis aligned tri-tri intersection